--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Select the targeted hardware
 # #######################################
 
-
+# With TFT:
 OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" ON)
 OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-SRC-4832 3.5inches" OFF)
@@ -11,17 +11,14 @@ OPTION(ESP32S3_8048S070C "TFT TARGET is ESP32S3_8048S070C - 7.0in. 800x480 (Capa
 OPTION(ESP32S3_8048S050C "TFT TARGET is ESP32S3_8048S050C - 5.0in. 800x480 (Capacitive)" OFF)
 OPTION(ESP32S3_8048S043C "TFT TARGET is ESP32S3_8048S043C - 4.3in. 800x480 (Capacitive)" OFF)
 OPTION(ESP32S3_4827S043C "TFT TARGET is ESP32S3_4827S043C - 4.3in. 480x272 (Capacitive)" OFF)
-
-OPTION(ESP32S3_FREENOVE_1_1 "HARDWARE TARGET is ESP32S3 Freenove v1.1" OFF)
-OPTION(ESP32S3_CUSTOM "HARDWARE TARGET is ESP32S3 custom board" OFF)
-OPTION(ESP32_CUSTOM "HARDWARE TARGET is ESP32 custom board" OFF)
-
-# WARNING:
-#   Limited help or support available for these targets.
-#   PSRAM hardware mod is REQUIRED for full functionality and performance.
 OPTION(ESP32_3248S035C "TFT TARGET is ESP32_3248S035C - 3.5in. 480x320 (Capacitive)" OFF)
 OPTION(ESP32_3248S035R "TFT TARGET is ESP32_3248S035R - 3.5in. 480x320 (Resistive)" OFF)
 OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R - 2.8in. 320x240 (Resistive)" OFF)
+
+# Without TFT:
+OPTION(ESP32S3_FREENOVE_1_1 "HARDWARE TARGET is ESP32S3 Freenove v1.1" OFF)
+OPTION(ESP32S3_CUSTOM "HARDWARE TARGET is ESP32S3 custom board" OFF)
+OPTION(ESP32_CUSTOM "HARDWARE TARGET is ESP32 custom board" OFF)
 
 
 # #######################################
@@ -84,38 +81,45 @@ if(ESP32S3_FREENOVE_1_1)
 elseif(ESP32S3_8048S070C)
     set(TFT_TARGET "ESP32S3_8048S070C")
     set(SDKCONFIG hardware/common/sdkconfig/ESP32-S3/with_PSRAM/16MB_Flash)    
-    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32S3_8048S070C/components)
-    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32S3_8048S070C/components/bsp")
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/SUNTON_ESP32-S3/components)    
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/SUNTON_ESP32-S3/components/bsp/include")
+    add_compile_options(-DTARGET_ESP32S3_8048S070C=1)
 elseif(ESP32S3_8048S050C)
     set(TFT_TARGET "ESP32S3_8048S050C")
     set(SDKCONFIG hardware/common/sdkconfig/ESP32-S3/with_PSRAM/16MB_Flash)    
-    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32S3_8048S050C/components)
-    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32S3_8048S050C/components/bsp")
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/SUNTON_ESP32-S3/components)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/SUNTON_ESP32-S3/components/bsp/include")
+    add_compile_options(-DTARGET_ESP32S3_8048S050C=1)
 elseif(ESP32S3_8048S043C)
     set(TFT_TARGET "ESP32S3_8048S043C")
     set(SDKCONFIG hardware/common/sdkconfig/ESP32-S3/with_PSRAM/16MB_Flash)    
-    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32S3_8048S043C/components)
-    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32S3_8048S043C/components/bsp")
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/SUNTON_ESP32-S3/components)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/SUNTON_ESP32-S3/components/bsp/include")
+    add_compile_options(-DTARGET_ESP32S3_8048S043C=1)
 elseif(ESP32S3_4827S043C)
     set(TFT_TARGET "ESP32S3_4827S043C")
     set(SDKCONFIG hardware/common/sdkconfig/ESP32-S3/with_PSRAM/16MB_Flash)    
-    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32S3_4827S043C/components)
-    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32S3_4827S043C/components/bsp")
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/SUNTON_ESP32-S3/components)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/SUNTON_ESP32-S3/components/bsp/include")
+    add_compile_options(-DTARGET_ESP32S3_4827S043C=1)
 elseif(ESP32_3248S035C)
     set(TFT_TARGET "ESP32_3248S035C")
     set(SDKCONFIG hardware/common/sdkconfig/ESP32/no_PSRAM/4MB_Flash)    
-    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035C/components)
-    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32_3248S035C/components/bsp")
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/SUNTON_ESP32/components)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/SUNTON_ESP32/components/bsp/include")
+    add_compile_options(-DTARGET_ESP32_3248S035C=1)
 elseif(ESP32_3248S035R)
     set(TFT_TARGET "ESP32_3248S035R")
     set(SDKCONFIG hardware/common/sdkconfig/ESP32/no_PSRAM/4MB_Flash)    
-    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035R/components)
-    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32_3248S035R/components/bsp")
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/SUNTON_ESP32/components)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/SUNTON_ESP32/components/bsp/include")
+    add_compile_options(-DTARGET_ESP32_3248S035R=1)
 elseif(ESP32_2432S028R)
     set(TFT_TARGET "ESP32_2432S028R")
     set(SDKCONFIG hardware/common/sdkconfig/ESP32/no_PSRAM/4MB_Flash)    
-    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32_2432S028R/components)
-    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32_2432S028R/components/bsp")
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/SUNTON_ESP32/components)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/SUNTON_ESP32/components/bsp/include")
+    add_compile_options(-DTARGET_ESP32_2432S028R=1)
 elseif(ESP32S3_HMI43V3)
     set(TFT_TARGET "ESP32S3_HMI43V3")    
     set(SDKCONFIG hardware/ESP32S3_HMI43V3/sdkconfig)
@@ -144,11 +148,13 @@ elseif(ESP32S3_CUSTOM)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_CUSTOM/components)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32S3_CUSTOM/components/bsp")    
     add_compile_options(-DESP3D_USB_SERIAL_FEATURE=1)
+    unset(TFT_UI_SERVICE CACHE)
 elseif(ESP32_CUSTOM)
     set(TFT_TARGET "ESP32_CUSTOM")
     set(SDKCONFIG hardware/ESP32_CUSTOM/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32_CUSTOM/components)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32_CUSTOM/components/bsp")
+    unset(TFT_UI_SERVICE CACHE)
 else()
     message(FATAL_ERROR
         "\n"
