--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,10 @@
 # #######################################
 
 # With TFT:
-OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" ON)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" OFF)
 OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-SRC-4832 3.5inches" OFF)
-OPTION(ESP32S3_BZM_TFT35_GT911 "TFT TARGET is ESP32S3 Panlee BZM 3.5inches" OFF)
+OPTION(ESP32S3_BZM_TFT35_GT911 "TFT TARGET is ESP32S3 Panlee BZM 3.5inches" ON)
 OPTION(ESP32S3_8048S070C "TFT TARGET is ESP32S3_8048S070C - 7.0in. 800x480 (Capacitive)" OFF)
 OPTION(ESP32S3_8048S050C "TFT TARGET is ESP32S3_8048S050C - 5.0in. 800x480 (Capacitive)" OFF)
 OPTION(ESP32S3_8048S043C "TFT TARGET is ESP32S3_8048S043C - 4.3in. 800x480 (Capacitive)" OFF)
@@ -132,8 +132,10 @@ elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
     add_compile_options(-DESP3D_USB_SERIAL_FEATURE=1)
 elseif(ESP32S3_BZM_TFT35_GT911)
     set(TFT_TARGET "ESP32S3_BZM_TFT35_GT911")
+    add_compile_options(-DWITH_PSRAM=1)
+    add_compile_options(-DWITH_GT911_INT=1)
     set(SDKCONFIG hardware/ESP32S3_BZM_TFT35_GT911/sdkconfig)
-    set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_BZM_TFT35_GT911/components)
+    list(APPEND EXTRA_COMPONENT_DIRS hardware/ESP32S3_BZM_TFT35_GT911/components)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32S3_BZM_TFT35_GT911/components/bsp")
 elseif(ESP32S3_CUSTOM)
     set(TFT_TARGET "ESP32S3_CUSTOM")
